Rename the repo and crates
The current names are long and annoying, lets rename them.

This is based on top of the 0.3.0 releases so that there is some
continuity.

The repository changes from `rust-bitcoind-json-rpc` to `corepc`.

Crate name changes:

- `bitcoind-json-rpc-client` becomes `corepc-client`
- `bitcoind-json-rpc-types` becomes `corepc-types`
- `bitcoind-json-rpc-regtest` becomes `corepc-node`

Directory name changes:

- `json` becomes `types` (to match the crate name)
- `regtest` becomes `bitcoind` (to match the original project name)

--- a/bitcoind/Cargo.toml
+++ b/bitcoind/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bitcoind-json-rpc-regtest"
+name = "corepc-node"
 version = "0.3.0"
 authors = ["Riccardo Casatta <riccardo@casatta.it>", "Tobin C. Harding <me@tobin.cc>"]
 license = "MIT"
