--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [workspace]
-members = ["client", "json", "jsonrpc"]
-exclude = ["integration_test", "regtest"]
+members = ["client", "types", "jsonrpc"]
+exclude = ["integration_test", "bitcoind"]
 resolver = "2"
 
-[patch.crates-io.bitcoind-json-rpc-client]
+[patch.crates-io.corepc-client]
 path = "client"
 
-[patch.crates-io.bitcoind-json-rpc-types]
-path = "json"
+[patch.crates-io.corepc-types]
+path = "types"
 
 [patch.crates-io.jsonrpc]
 path = "jsonrpc"
