--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bitcoind-json-rpc-types"
+name = "corepc-types"
 version = "0.3.0"
 authors = ["Tobin C. Harding <me@tobin.cc>"]
 license = "CC0-1.0"
