--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = ["client", "types", "jsonrpc"]
-exclude = ["integration_test", "bitcoind"]
+exclude = ["integration_test", "node"]
 resolver = "2"
 
 [patch.crates-io.corepc-client]
@@ -8,9 +8,6 @@ path = "client"
 
 [patch.crates-io.corepc-types]
 path = "types"
-
-[patch.crates-io.corepc-node]
-path = "bitcoind"
 
 [patch.crates-io.jsonrpc]
 path = "jsonrpc"
