--- a/integration_test/Cargo.toml
+++ b/integration_test/Cargo.toml
@@ -13,43 +13,46 @@ edition = "2021"
 [features]
 # Enable the same feature in `node` and the version feature here.
 # All minor releases (but only the latest patch release).
-"28_0" = ["v28", "node/28_0"]
-"27_1" = ["v27", "node/27_1"]
-"27_0" = ["v27", "node/27_0"]
-"26_2" = ["v26", "node/26_2"]
-"26_1" = ["v26", "node/26_1"]
-"26_0" = ["v26", "node/26_0"]
-"25_2" = ["v25", "node/25_2"]
-"25_1" = ["v25", "node/25_1"]
-"25_0" = ["v25", "node/25_0"]
-"24_2" = ["v24", "node/24_2"]
-"24_1" = ["v24", "node/24_1"]
-"24_0_1" = ["v24", "node/24_0_1"]
-"23_2" = ["v23", "node/23_2"]
-"23_1" = ["v23", "node/23_1"]
-"23_0" = ["v23", "node/23_0"]
-"22_1" = ["v22", "node/22_1"]
-"22_0" = ["v22", "node/22_0"]
+28_0 = ["v28", "node/28_0"]
+27_1 = ["v27", "node/27_1"]
+27_0 = ["v27", "node/27_0"]
+26_2 = ["v26", "node/26_2"]
+26_1 = ["v26", "node/26_1"]
+26_0 = ["v26", "node/26_0"]
+25_2 = ["v25", "node/25_2"]
+25_1 = ["v25", "node/25_1"]
+25_0 = ["v25", "node/25_0"]
+24_2 = ["v24", "node/24_2"]
+24_1 = ["v24", "node/24_1"]
+24_0_1 = ["v24", "node/24_0_1"]
+23_2 = ["v23", "node/23_2"]
+23_1 = ["v23", "node/23_1"]
+23_0 = ["v23", "node/23_0"]
+22_1 = ["v22", "node/22_1"]
+22_0 = ["v22", "node/22_0"]
 # Only the latest minor version for these.
-"0_21_2" = ["v21", "node/0_21_2"]
-"0_20_2" = ["v20", "node/0_20_2"]
-"0_19_1" = ["v19", "node/0_19_1"]
-"0_18_1" = ["v18", "node/0_18_1"]
-"0_17_1" = ["v17", "node/0_17_1"]
+0_21_2 = ["v21", "node/0_21_2"]
+0_20_2 = ["v20", "node/0_20_2"]
+0_19_1 = ["v19", "node/0_19_1"]
+0_18_1 = ["v18", "node/0_18_1"]
+0_17_1 = ["v17", "node/0_17_1"]
 
-# Each minor version is tested with the same client.
-"v28" = []
-"v27" = []
-"v26" = []
-"v25" = []
-"v24" = []
-"v23" = []
-"v22" = []
-"v21" = []
-"v20" = []
-"v19" = []
-"v18" = []
-"v17" = []
+# These features are just for internal use (feature gating).
+# Each major version is tested with the same client.
+v28 = []
+v27 = []
+v26 = []
+v25 = []
+v24 = []
+v23 = []
+v22 = []
+v21 = []
+v20 = []
+v19 = []
+v18 = []
+v17 = []
+
+TODO = []                       # This is a dirty hack while writing the tests.
 
 [dependencies]
 bitcoin = { version = "0.32.0", default-features = false, features = ["std", "serde"] }
