--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -36,45 +36,42 @@ anyhow = "1.0.66"
 # Please note, in this crate the version features are mutally exclusive.
 #
 # - `cargo test --all-features` is the same as `cargo test --features=v28_0`
+# - To use --no-default-features you must configure the bitcoind binary to be version 28 either by having `bitcoind` in your path or using `BITCOIND_EXE=/path/to/bitcoind`.
 # - `cargo test --no-default-features` uses `v28_0` also.
 [features]
+default = ["28_0"]
+
 # download is not supposed to be used directly only through selecting one of the version feature
-"download" = ["bitcoin_hashes", "flate2", "tar", "minreq", "zip"]
+download = ["bitcoin_hashes", "flate2", "tar", "minreq", "zip"]
 
 # We support all minor releases (but only the latest patch release).
-"28_0" = ["download", "27_1"]
-"27_1" = ["download", "27_0"]
-"27_0" = ["download", "26_2"]
-"26_2" = ["download", "26_1"]
-"26_1" = ["download", "26_0"]
-"26_0" = ["download", "25_2"]
-"25_2" = ["download", "25_1"]
-"25_1" = ["download", "25_0"]
-"25_0" = ["download", "24_2"]
-"24_2" = ["download", "24_1"]
-"24_1" = ["download", "24_0_1"]
-"24_0_1" = ["download", "23_2"]
-"23_2" = ["download", "23_1"]
-"23_1" = ["download", "23_0"]
-"23_0" = ["download", "22_1"]
-"22_1" = ["download", "22_0"]
-"22_0" = ["download", "0_21_2"]
+28_0 = ["download", "27_1"]
+27_1 = ["download", "27_0"]
+27_0 = ["download", "26_2"]
+26_2 = ["download", "26_1"]
+26_1 = ["download", "26_0"]
+26_0 = ["download", "25_2"]
+25_2 = ["download", "25_1"]
+25_1 = ["download", "25_0"]
+25_0 = ["download", "24_2"]
+24_2 = ["download", "24_1"]
+24_1 = ["download", "24_0_1"]
+24_0_1 = ["download", "23_2"]
+23_2 = ["download", "23_1"]
+23_1 = ["download", "23_0"]
+23_0 = ["download", "22_1"]
+22_1 = ["download", "22_0"]
+22_0 = ["download", "0_21_2"]
 # We only support the latest minor version for these.
-"0_21_2" = ["download", "0_20_2"]
-"0_20_2" = ["download", "0_19_1"]
-"0_19_1" = ["download", "0_18_1"]
-"0_18_1" = ["download", "0_17_1"]
-"0_17_1" = ["download"]
+0_21_2 = ["download", "0_20_2"]
+0_20_2 = ["download", "0_19_1"]
+0_19_1 = ["download", "0_18_1"]
+0_18_1 = ["download", "0_17_1"]
+0_17_1 = ["download"]
 
-"doc" = [] # used only for documentation building
+doc = [] # used only for documentation building
 
 
 [package.metadata.docs.rs]
 features = ["download", "doc", "26_2"]
 rustdoc-args = ["--cfg", "docsrs"]
-
-[patch.crates-io.corepc-client]
-path = "../client"
-
-[patch.crates-io.corepc-types]
-path = "../types"
