--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -16,7 +16,7 @@ exclude = ["tests", "contrib"]
 default = []
 
 [dependencies]
-bitcoin = { version = "0.32.0", default-features = false, features = ["std", "serde"] }
+bitcoin = { version = "0.32.0", default-features = false, features = ["std", "serde", "base64"] }
 internals = { package = "bitcoin-internals", version = "0.3.0", default-features = false,  features = ["std"] }
 serde = { version = "1.0.103", default-features = false, features = [ "derive", "alloc" ] }
 serde_json = { version = "1.0.117" }
