--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -3,7 +3,7 @@ name = "corepc-types"
 version = "0.4.0"
 authors = ["Tobin C. Harding <me@tobin.cc>"]
 license = "CC0-1.0"
-repository = "https://github.com/tcharding/corepc"
+repository = "https://github.com/rust-bitcoin/corepc"
 description = "Bitcoin Core JSON-RPC API types"
 categories = ["cryptography::cryptocurrencies"]
 keywords = ["bitcoin", "bitcoind", "json-rpc"]
