Fix repository link

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -3,7 +3,7 @@ name = "corepc-node"
 version = "0.4.0"
 authors = ["Riccardo Casatta <riccardo@casatta.it>", "Tobin C. Harding <me@tobin.cc>"]
 license = "MIT"
-repository = "https://github.com/rust-bitcoin/corepc/corepc-node"
+repository = "https://github.com/rust-bitcoin/corepc"
 description = "Utility to run a regtest bitcoind process, useful in integration testing environments"
 categories = ["cryptography::cryptocurrencies", "development-tools::testing"]
 keywords = ["bitcoin", "bitcoind", "json-rpc"]
