--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -170,6 +170,24 @@ jobs:
       - name: "Run test script"
         run: ./maintainer-tools/ci/run_task.sh docsrs
 
+  Format:                       #  1 job, run cargo fmt directly.
+    name: Format - nightly toolchain
+    needs: Prepare
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+    steps:
+      - name: "Checkout repo"
+        uses: actions/checkout@v4
+      - name: "Select toolchain"
+        uses: dtolnay/rust-toolchain@v1
+        with:
+          toolchain: ${{ needs.Prepare.outputs.nightly_version }}
+      - name: "Install rustfmt"
+        run: rustup component add rustfmt
+      - name: "Check formatting"
+        run: cargo fmt --all -- --check
+
   Integration:                  # 1 job for each bitcoind version we support.
     name: Integration tests - stable toolchain
     runs-on: ubuntu-latest
