--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -44,7 +44,7 @@ default = ["28_0"]
 # download is not supposed to be used directly only through selecting one of the version feature
 download = ["bitcoin_hashes", "flate2", "tar", "minreq", "zip"]
 
-# We support all minor releases (but only the latest patch release).
+# We support all minor releases of the latest three versions.
 28_0 = ["download", "27_2"]
 27_2 = ["download", "27_1"]
 27_1 = ["download", "27_0"]
@@ -52,18 +52,11 @@ download = ["bitcoin_hashes", "flate2", "tar", "minreq", "zip"]
 26_2 = ["download", "26_1"]
 26_1 = ["download", "26_0"]
 26_0 = ["download", "25_2"]
-25_2 = ["download", "25_1"]
-25_1 = ["download", "25_0"]
-25_0 = ["download", "24_2"]
-24_2 = ["download", "24_1"]
-24_1 = ["download", "24_0_1"]
-24_0_1 = ["download", "23_2"]
-23_2 = ["download", "23_1"]
-23_1 = ["download", "23_0"]
-23_0 = ["download", "22_1"]
-22_1 = ["download", "22_0"]
-22_0 = ["download", "0_21_2"]
-# We only support the latest minor version for these.
+# We only support the latest minor version for older versions.
+25_2 = ["download", "24_2"]
+24_2 = ["download", "23_2"]
+23_2 = ["download", "22_1"]
+22_1 = ["download", "0_21_2"]
 0_21_2 = ["download", "0_20_2"]
 0_20_2 = ["download", "0_19_1"]
 0_19_1 = ["download", "0_18_1"]
