Exclude verify from workspace
The `verify` crate is a dev tool and should not have been included in
the workspace because it has no lock file requirements.

Exclude `verify` from the workspace and update the lock files.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
-members = ["client", "types", "jsonrpc", "verify"]
-exclude = ["integration_test", "node"]
+members = ["client", "types", "jsonrpc"]
+exclude = ["integration_test", "node", "verify"]
 resolver = "2"
 
 [patch.crates-io.corepc-client]
