--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -13,11 +13,12 @@ rust-version = "1.63.0"
 exclude = ["tests", "contrib"]
 
 [features]
-default = []
+default = ["std"]
+std = ["bitcoin/std", "internals/std"]
 
 [dependencies]
-bitcoin = { version = "0.32.0", default-features = false, features = ["std", "serde", "base64"] }
-internals = { package = "bitcoin-internals", version = "0.3.0", default-features = false,  features = ["std"] }
+bitcoin = { version = "0.32.0", default-features = false, features = ["serde", "base64"] }
+internals = { package = "bitcoin-internals", version = "0.3.0", default-features = false, features = ["alloc"]}
 serde = { version = "1.0.103", default-features = false, features = [ "derive", "alloc" ] }
 serde_json = { version = "1.0.117" }
 
