Remove dependency on bitcoin-internals
Currently we have a dependency on `bitcoin_internals` just for the
`write_err` macro.

Copy the macro here and remove the dependency. Make the macro and module
private.

--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -14,11 +14,10 @@ exclude = ["tests", "contrib"]
 
 [features]
 default = ["std"]
-std = ["bitcoin/std", "internals/std"]
+std = ["bitcoin/std"]
 
 [dependencies]
 bitcoin = { version = "0.32.0", default-features = false, features = ["serde", "base64"] }
-internals = { package = "bitcoin-internals", version = "0.3.0", default-features = false, features = ["alloc"]}
 serde = { version = "1.0.103", default-features = false, features = [ "derive", "alloc" ] }
 serde_json = { version = "1.0.117" }
 
