--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -27,9 +27,7 @@ env_logger = "0.9.0"
 bitcoin_hashes = { version = ">= 0.13, <= 0.14", optional = true }
 flate2 = { version = "1.0", optional = true }
 tar = { version = "0.4", optional = true }
-minreq = { version = "2.9.1", default-features = false, features = [
-    "https",
-], optional = true }
+minreq = { version = "2.9.1", default-features = false, features = ["https"], optional = true }
 zip = { version = "0.6", optional = true }
 anyhow = "1.0.66"
 
