--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -24,12 +24,12 @@ serde_json = { version = "1.0.117" }
 env_logger = "0.9.0"
 
 [build-dependencies]
+anyhow = { version = "1.0.66", optional = true }
 bitcoin_hashes = { version = ">= 0.13, <= 0.14", optional = true }
 flate2 = { version = "1.0", optional = true }
 tar = { version = "0.4", optional = true }
 minreq = { version = "2.9.1", default-features = false, features = ["https"], optional = true }
 zip = { version = "0.6", optional = true }
-anyhow = "1.0.66"
 
 # Please note, in this crate the version features are mutally exclusive.
 #
@@ -41,7 +41,7 @@ anyhow = "1.0.66"
 # path or using `BITCOIND_EXE=/path/to/bitcoind`. Note also that the feature enabled should match
 # the version from `bitcoind --version`.
 [features]
-download = ["bitcoin_hashes", "flate2", "tar", "minreq", "zip"]
+download = ["anyhow", "bitcoin_hashes", "flate2", "tar", "minreq", "zip"]
 
 # We support all minor releases of the latest three versions.
 28_0 = ["27_2"]
