--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -14,14 +14,14 @@ exclude = ["tests", "contrib"]
 
 [dependencies]
 corepc-client = { version = "0.5.0", features = ["client-sync"] }
-log = "0.4"
-which = "4.2.5"
-anyhow = "1.0.66"
-tempfile = "3"
-serde_json = { version = "1.0.117" }
+log = { version = "0.4", default-features = false }
+which = { version = "3.1.1", default-features = false }
+anyhow = { version = "1.0.66", default-features = false, features = ["std"] }
+tempfile = {version = "3", default-features = false }
+serde_json = { version = "1.0.117", default-features = false }
 
 [dev-dependencies]
-env_logger = "0.9.0"
+env_logger = { version = "0.9.3", default-features = false }
 
 [build-dependencies]
 anyhow = { version = "1.0.66", optional = true }
@@ -29,7 +29,7 @@ bitcoin_hashes = { version = ">= 0.13, <= 0.14", optional = true }
 flate2 = { version = "1.0", optional = true }
 tar = { version = "0.4", optional = true }
 minreq = { version = "2.9.1", default-features = false, features = ["https"], optional = true }
-zip = { version = "0.6", optional = true }
+zip = { version = "0.5.13", optional = true }
 
 # Please note, it is expected that a single version feature will be enabled however if you enable
 # multiple the highest version number will take precedence.
@@ -64,8 +64,6 @@ download = ["anyhow", "bitcoin_hashes", "flate2", "tar", "minreq", "zip"]
 0_18_1 = ["0_17_1"]
 0_17_1 = []
 
-doc = [] # Used only for documentation building.
-
 [package.metadata.docs.rs]
-features = ["download", "doc", "28_0"]
+all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
