--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: rust-bitcoin/rust-bitcoin-maintainer-tools
-          rev: b2ac115
+          ref: c3324024ced9bb1eb854397686919c3ff7d97e1e
           path: maintainer-tools
       - name: "Select toolchain"
         uses: dtolnay/rust-toolchain@stable
@@ -58,7 +58,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: rust-bitcoin/rust-bitcoin-maintainer-tools
-          rev: b2ac115
+          ref: c3324024ced9bb1eb854397686919c3ff7d97e1e
           path: maintainer-tools
       - name: "Select toolchain"
         uses: dtolnay/rust-toolchain@v1
@@ -108,7 +108,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: rust-bitcoin/rust-bitcoin-maintainer-tools
-          rev: b2ac115
+          ref: c3324024ced9bb1eb854397686919c3ff7d97e1e
           path: maintainer-tools
       - name: "Select toolchain"
         uses: dtolnay/rust-toolchain@v1
@@ -135,7 +135,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: rust-bitcoin/rust-bitcoin-maintainer-tools
-          rev: b2ac115
+          ref: c3324024ced9bb1eb854397686919c3ff7d97e1e
           path: maintainer-tools
       - name: "Select toolchain"
         uses: dtolnay/rust-toolchain@stable
@@ -159,7 +159,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: rust-bitcoin/rust-bitcoin-maintainer-tools
-          rev: b2ac115
+          ref: c3324024ced9bb1eb854397686919c3ff7d97e1e
           path: maintainer-tools
       - name: "Select toolchain"
         uses: dtolnay/rust-toolchain@v1
