node: Fix manifest comments
The comments are stale, fix them to correctly explain how the features
work in this crate.

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -31,15 +31,13 @@ tar = { version = "0.4", optional = true }
 minreq = { version = "2.9.1", default-features = false, features = ["https"], optional = true }
 zip = { version = "0.6", optional = true }
 
-# Please note, in this crate the version features are mutally exclusive.
+# Please note, it is expected that a single version feature will be enabled however if you enable
+# multiple the highest version number will take precedence.
 #
-# - `cargo test --features=27_2,download` to download Bitcoin Core binary v27.
-# - `cargo test --all-features` is the same as `cargo test --features=download,v28_0`
-# - `cargo test --features=28_0` to use `bitcoind`.
-#
-# If you do not enable `download` then you must configure the bitcoind binary by `bitcoind` in your
-# path or using `BITCOIND_EXE=/path/to/bitcoind`. Note also that the feature enabled should match
-# the version from `bitcoind --version`.
+# - `cargo test --features=27_2,download` to download Bitcoin Core binary `v27.2`.
+# - `cargo test --features=28_0` to use `bitcoind` from the host environment.
+# - `cargo test --all-features`: Same as using latest version e.g., `cargo test --features=20_0,download`
+# - `cargo test`: Does not work, you MUST enable a version feature.
 [features]
 download = ["anyhow", "bitcoin_hashes", "flate2", "tar", "minreq", "zip"]
 
