node: Set default feature to 0_17_1
In #45 we removed the default feature because we were setting it to
`28_0` and this was a footgun because downstream crates needed to
explicitly use no default features. This change made it impossible to
build the crate without selecting a version feature which implicitly
means `--no-default-features` does not work.

Instead we can set the default to `0_17_1` and then the crate builds
with no default features and also downstream users who select a higher
version get correct behaviour because higher versions override lower
ones.

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -36,9 +36,12 @@ zip = { version = "0.6", optional = true }
 #
 # - `cargo test --features=27_2,download` to download Bitcoin Core binary `v27.2`.
 # - `cargo test --features=28_0` to use `bitcoind` from the host environment.
-# - `cargo test --all-features`: Same as using latest version e.g., `cargo test --features=20_0,download`
-# - `cargo test`: Does not work, you MUST enable a version feature.
+# - `cargo test` is equivalent to `cargo test --features=0_17_1`.
+# - `cargo test --all-features`: Same as using latest version.
+# - `cargo test --no-default-features` does not work, you MUST enable a version feature.
 [features]
+default = ["0_17_1"]
+
 download = ["anyhow", "bitcoin_hashes", "flate2", "tar", "minreq", "zip"]
 
 # We support all minor releases of the latest three versions.
