integration_test: Fix feature comments
In the comments I got mixed up between this crate and the `node` crate.
Annoyingly, and confusingly, the unusual features in these two crates do
not behave the same. In integration tests we feature gate tests on a
specific version - this means the version features are mutually
exclusive.

--- a/integration_test/Cargo.toml
+++ b/integration_test/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 
 # Please note, in this crate the version features are mutally exclusive.
 #
-# - `cargo test --all-features` is the same as `cargo test --features=v26_2`
+# - `cargo test --all-features` does not work - select a single version.
 # - `cargo test --no-default-features` skips all tests.
 [features]
 # Enable the same feature in `node` and the version feature here.
