--- a/integration_test/Cargo.toml
+++ b/integration_test/Cargo.toml
@@ -49,9 +49,9 @@ v17 = []
 TODO = []                       # This is a dirty hack while writing the tests.
 
 [dependencies]
-bitcoin = { version = "0.32.0", default-features = false, features = ["std", "serde"] }
-client = { package = "corepc-client", version = "0.6.0", default-features = false, features = ["client-sync"] }
-node = { package = "corepc-node", version = "0.6.0", default-features = false, features = ["download"] }
+bitcoin = { version = "0.33.0-alpha.0", default-features = false, features = ["std", "serde"] }
+client = { package = "corepc-client", version = "0.7.0", default-features = false, features = ["client-sync"] }
+node = { package = "corepc-node", version = "0.7.0", default-features = false, features = ["download"] }
 rand = "0.8.5"
 env_logger = "0.9.0"
 
@@ -65,3 +65,31 @@ path = "../types"
 
 [patch.crates-io.corepc-node]
 path = "../node"
+
+[patch.crates-io.base58ck]
+git = "https://github.com/tcharding/rust-bitcoin"
+branch = "alpha"
+
+[patch.crates-io.bitcoin]
+git = "https://github.com/tcharding/rust-bitcoin"
+branch = "alpha"
+
+[patch.crates-io.bitcoin_hashes]
+git = "https://github.com/tcharding/rust-bitcoin"
+branch = "alpha"
+
+[patch.crates-io.bitcoin-internals]
+git = "https://github.com/tcharding/rust-bitcoin"
+branch = "alpha"
+
+[patch.crates-io.bitcoin-io]
+git = "https://github.com/tcharding/rust-bitcoin"
+branch = "alpha"
+
+[patch.crates-io.bitcoin-primitives]
+git = "https://github.com/tcharding/rust-bitcoin"
+branch = "alpha"
+
+[patch.crates-io.bitcoin-units]
+git = "https://github.com/tcharding/rust-bitcoin"
+branch = "alpha"
