--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "corepc-node"
-version = "0.6.0"
+version = "0.7.0"
 authors = ["Riccardo Casatta <riccardo@casatta.it>", "Tobin C. Harding <me@tobin.cc>"]
 license = "MIT"
 repository = "https://github.com/rust-bitcoin/corepc"
@@ -13,9 +13,9 @@ rust-version = "1.63.0"
 exclude = ["tests", "contrib"]
 
 [dependencies]
-corepc-client = { version = "0.6.0", features = ["client-sync"] }
+corepc-client = { version = "0.7.0", features = ["client-sync"] }
 log = { version = "0.4", default-features = false }
-which = { version = "3.1.1", default-features = false }
+which = { version = "4.2.5", default-features = false }
 anyhow = { version = "1.0.66", default-features = false, features = ["std"] }
 tempfile = {version = "3", default-features = false }
 serde_json = { version = "1.0.117", default-features = false }
@@ -25,7 +25,7 @@ env_logger = { version = "0.9.3", default-features = false }
 
 [build-dependencies]
 anyhow = { version = "1.0.66", optional = true }
-bitcoin_hashes = { version = ">= 0.13, <= 0.14", optional = true }
+bitcoin_hashes = { version = "1.0.0-alpha.0", features = ["hex"], optional = true }
 flate2 = { version = "1.0", optional = true }
 tar = { version = "0.4", optional = true }
 minreq = { version = "2.9.1", default-features = false, features = ["https"], optional = true }
