chore: replaced deprecated 'version' option with 'style_edition' and update nightly version to 2025-04-04

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -58,7 +58,7 @@ match_block_trailing_comma = false
 blank_lines_upper_bound = 1
 blank_lines_lower_bound = 0
 edition = "2021"
-version = "One"
+style_edition = "2021"
 inline_attribute_width = 0
 format_generated_files = true
 merge_derives = true
