integration_test: Add download feature
Locally downloading the binary all the time is wasteful of time and
bandwidth. Also the download hangs for some reason ATM.

Add a `download` feature for `node` and enable it in CI.

--- a/integration_test/Cargo.toml
+++ b/integration_test/Cargo.toml
@@ -11,6 +11,8 @@ edition = "2021"
 # - `cargo test --all-features` does not work - select a single version.
 # - `cargo test --no-default-features` skips all tests.
 [features]
+download = ["node/download"]
+
 # Enable the same feature in `node` and the version feature here.
 # All minor releases of the latest three versions.
 28_1 = ["v28", "node/28_1"]
@@ -51,7 +53,7 @@ TODO = []                       # This is a dirty hack while writing the tests.
 
 [dependencies]
 bitcoin = { version = "0.32.0", default-features = false, features = ["std", "serde"] }
-node = { package = "corepc-node", version = "0.7.0", default-features = false, features = ["download"] }
+node = { package = "corepc-node", version = "0.7.0", default-features = false }
 rand = "0.8.5"
 env_logger = "0.9.0"
 
