--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -210,23 +210,23 @@ jobs:
       matrix:
         feature:
           [
-            "28_1",
-            "28_0",
-            "27_2",
-            "27_1",
-            "27_0",
-            "26_2",
-            "26_1",
-            "26_0",
-            "25_2",
-            "24_2",
-            "23_2",
-            "22_1",
-            "0_21_2",
-            "0_20_2",
-            "0_19_1",
-            "0_18_1",
-            "0_17_2",
+            "28_1,download",
+            "28_0,download",
+            "27_2,download",
+            "27_1,download",
+            "27_0,download",
+            "26_2,download",
+            "26_1,download",
+            "26_0,download",
+            "25_2,download",
+            "24_2,download",
+            "23_2,download",
+            "22_1,download",
+            "0_21_2,download",
+            "0_20_2,download",
+            "0_19_1,download",
+            "0_18_1,download",
+            "0_17_2,download",
           ]
     steps:
       - name: "Checkout repo"
