--- a/integration_test/Cargo.toml
+++ b/integration_test/Cargo.toml
@@ -15,39 +15,41 @@ download = ["node/download"]
 
 # Enable the same feature in `node` and the version feature here.
 # All minor releases of the latest three versions.
-29_0 = ["v29", "node/29_0"]
-28_1 = ["v28", "node/28_1"]
-28_0 = ["v28", "node/28_0"]
-27_2 = ["v27", "node/27_2"]
-27_1 = ["v27", "node/27_1"]
-27_0 = ["v27", "node/27_0"]
+29_0 = ["v29_and_below", "node/29_0"]
+28_1 = ["v28_and_below", "node/28_1"]
+28_0 = ["v28_and_below", "node/28_0"]
+27_2 = ["v27_and_below", "node/27_2"]
+27_1 = ["v27_and_below", "node/27_1"]
+27_0 = ["v27_and_below", "node/27_0"]
 # Only the latest minor version for older versions.
-26_2 = ["v26", "node/26_2"]
-25_2 = ["v25", "node/25_2"]
-24_2 = ["v24", "node/24_2"]
-23_2 = ["v23", "node/23_2"]
-22_1 = ["v22", "node/22_1"]
-0_21_2 = ["v21", "node/0_21_2"]
-0_20_2 = ["v20", "node/0_20_2"]
-0_19_1 = ["v19", "node/0_19_1"]
-0_18_1 = ["v18", "node/0_18_1"]
+26_2 = ["v26_and_below", "node/26_2"]
+25_2 = ["v25_and_below", "node/25_2"]
+24_2 = ["v24_and_below", "node/24_2"]
+23_2 = ["v23_and_below", "node/23_2"]
+22_1 = ["v22_and_below", "node/22_1"]
+0_21_2 = ["v21_and_below", "node/0_21_2"]
+0_20_2 = ["v20_and_below", "node/0_20_2"]
+0_19_1 = ["v19_and_below", "node/0_19_1"]
+0_18_1 = ["v18_and_below", "node/0_18_1"]
 0_17_2 = ["v17", "node/0_17_2"]
 
 # These features are just for internal use (feature gating).
 # Each major version is tested with the same client.
-v29 = []
-v28 = []
-v27 = []
-v26 = []
-v25 = []
-v24 = []
-v23 = []
-v22 = []
-v21 = []
-v20 = []
-v19 = []
-v18 = []
-v17 = []
+# A specific range of versions can be specified e.g. for 24-26:
+# #[cfg(all(feature = "v26_and_below", not(feature = "v23_and_below")))]
+v29_and_below = []
+v28_and_below = ["v29_and_below"]
+v27_and_below = ["v28_and_below"]
+v26_and_below = ["v27_and_below"]
+v25_and_below = ["v26_and_below"]
+v24_and_below = ["v25_and_below"]
+v23_and_below = ["v24_and_below"]
+v22_and_below = ["v23_and_below"]
+v21_and_below = ["v22_and_below"]
+v20_and_below = ["v21_and_below"]
+v19_and_below = ["v20_and_below"]
+v18_and_below = ["v19_and_below"]
+v17 = ["v18_and_below"]
 
 TODO = []                       # This is a dirty hack while writing the tests.
 
