--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -22,3 +22,6 @@ serde = { version = "1.0.103", default-features = false, features = [ "derive", 
 serde_json = { version = "1.0.117" }
 
 [dev-dependencies]
+
+[lints.rust]
+missing_debug_implementations = "deny"
