CI: Lint non-member crates in CI
Lint the `verify` and `integration_tests` crates in CI using the scripts
we already have.

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -119,7 +119,10 @@ jobs:
       - name: "Set dependencies"
         run: cp Cargo-${{ matrix.dep }}.lock Cargo.lock
       - name: "Run test script"
-        run: ./maintainer-tools/ci/run_task.sh lint
+        run: |
+          ./maintainer-tools/ci/run_task.sh lint
+          ./contrib/lint-integtation-tests.sh
+          ./contrib/lint-verify.sh
 
   Docs:
     name: Docs - stable toolchain
