Add Jamil Lambert as an author of types
After all the work done it is finally time to take some accountability.

Add Jamil Lambert as an author of the types crate.

--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "corepc-types"
 version = "0.8.0"
-authors = ["Tobin C. Harding <me@tobin.cc>"]
+authors = ["Tobin C. Harding <me@tobin.cc>", "Jamil Lambert <Jamil.Lambert@proton.me>"]
 license = "CC0-1.0"
 repository = "https://github.com/rust-bitcoin/corepc"
 description = "Bitcoin Core JSON-RPC API types"
