Add a feature for serde deny unknown fields
Currently there is no way to turn off the deny unknown fields attribute.
This can cause issues when using the crate in cases where there are new
fields added that are not yet in the types structs, e.g. in unmerged
Core PRs.

Add a feature to types that can be used to enable this attribute, which
is off by default.

Forward the feature to client and then to node.

Use the feature in integration_test, through the node dependency.

--- a/integration_test/Cargo.toml
+++ b/integration_test/Cargo.toml
@@ -59,5 +59,7 @@ bitcoin = { version = "0.32.0", default-features = false, features = ["std", "se
 env_logger = "0.9.0"
 node = { package = "corepc-node", path = "../node", default-features = false }
 rand = "0.8.5"
+# Just so we can enable the feature.
+types = { package = "corepc-types", path = "../types", features = ["serde-deny-unknown-fields"] }
 
 [dev-dependencies]
