--- a/contrib/templates/run-bitcoind.conf
+++ b/contrib/templates/run-bitcoind.conf
@@ -11,3 +11,4 @@ v26 26.2   262 /opt/bitcoin-26.2/bin/bitcoind
 v27 27.2   272 /opt/bitcoin-27.2/bin/bitcoind
 v28 28.1   281 /opt/bitcoin-28.1/bin/bitcoind
 v29 29.0   290 /opt/bitcoin-29.0/bin/bitcoind
+v30 30.0   300 /opt/bitcoin-30.0/bin/bitcoind
