--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -44,7 +44,8 @@ default = ["0_17_2"]
 
 download = ["anyhow", "bitcoin_hashes", "flate2", "tar", "minreq", "zip"]
 
-# We support all minor releases of the latest three versions.
+# We support all minor releases of the latest four versions.
+30_0 = ["29_0"]
 29_0 = ["28_2"]
 28_2 = ["28_1"]
 28_1 = ["28_0"]
