Move download feature to the CI run command
Having `,download` in the feature list causes an issue when trying to
cache the downloads because of the comma.

Move the `,download` feature to the `cargo test` command instead of the
matrix feature list.

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -211,25 +211,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        feature:
+        version:
           [
-            "29_0,download",
-            "28_2,download",
-            "28_1,download",
-            "28_0,download",
-            "27_2,download",
-            "27_1,download",
-            "27_0,download",
-            "26_2,download",
-            "25_2,download",
-            "24_2,download",
-            "23_2,download",
-            "22_1,download",
-            "0_21_2,download",
-            "0_20_2,download",
-            "0_19_1,download",
-            "0_18_1,download",
-            "0_17_2,download",
+            "29_0",
+            "28_2",
+            "28_1",
+            "28_0",
+            "27_2",
+            "27_1",
+            "27_0",
+            "26_2",
+            "25_2",
+            "24_2",
+            "23_2",
+            "22_1",
+            "0_21_2",
+            "0_20_2",
+            "0_19_1",
+            "0_18_1",
+            "0_17_2",
           ]
     steps:
       - name: "Checkout repo"
@@ -237,4 +237,4 @@ jobs:
       - name: "Select toolchain"
         uses: dtolnay/rust-toolchain@stable
       - name: "Run integration tests"
-        run: cd integration_test && cargo test --features=${{ matrix.feature }}
+        run: cd integration_test && cargo test --features=${{ matrix.version }},download
