add: support and test for v30.2
v30.0 and v30.1 currently aren't covered by the ingegration tests and
their binaries aren't avalaible for download anymore due to a wallet
migration bug. See https://github.com/rust-bitcoin/corepc/issues/447

We can however use v30.2 in the integration tests. Also, make it
avaliable as feature.

--- a/integration_test/Cargo.toml
+++ b/integration_test/Cargo.toml
@@ -13,10 +13,12 @@ edition = "2021"
 [features]
 download = ["node/download"]
 
-latest = ["30_0"]
+latest = ["30_2"]
 
 # Enable the same feature in `node` and the version feature here.
 # All minor releases of the latest four versions.
+30_2 = ["v30_and_below", "node/30_2"]
+# Skip v30.1 due to wallet migration bug.
 30_0 = ["v30_and_below", "node/30_0"]
 29_0 = ["v29_and_below", "node/29_0"]
 28_2 = ["v28_and_below", "node/28_2"]
